# msi-monitor-ctrl

./: .gitignore  Cargo.toml  LICENSE  README.md  definitions.lua  example.lua  hotkey.ahk
lua_examples/: autorun.lua  basic.lua  complex.lua  conditional.lua  hotkey.lua  screen_edge.lua
src/: device.rs  errors.rs  main.rs
