[package]
name = "msi-monitor-ctrl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
rusb = "0.9.4"
mlua = { version = "0.10.2", features = ["lua54", "vendored"] }
tao = "0.31.1"
global-hotkey = "0.6.3"
nusb = "0.1.12"
futures-lite = "2.6.0"
crossbeam-channel = "0.5.14"
rfd = "0.15.2"
rdev = "0.5.3"
